--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul class="list-adv list">
                 <li class="adv-item">
                     <div class="icon-adv">
-                        <svg width="59.72px" height="64">
+                        <svg width="64" height="64">
                             <use href="./images/icons.svg#icon-antenna"></use>
                         </svg>
                     </div>
@@ -63,7 +63,7 @@
                 </li>
                 <li class="adv-item">
                     <div class="icon-adv">
-                        <svg width="59.72px" height="64">
+                        <svg width="64" height="64">
                             <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                     </div>
@@ -73,7 +73,7 @@
                 
                 <li class="adv-item">
                     <div class="icon-adv">
-                        <svg width="59.72px" height="64">
+                        <svg width="64" height="64">
                             <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                     </div>
@@ -83,7 +83,7 @@
                
                 <li class="adv-item">
                     <div class="icon-adv">
-                        <svg width="59.72px" height="64">
+                        <svg width="64" height="64">
                             <use href="./images/icons.svg#icon-diagram"></use>
                         </svg>
                     </div>
@@ -116,22 +116,22 @@
                         <p class="team-names">Product Designer</p>
                         <ul class="svg-list list">
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg  width="16" height="16">
+                                <svg class="team-svg"  width="16" height="16">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a></li>
@@ -143,22 +143,22 @@
                         <p class="team-names">Frontend Developer</p>
                         <ul class="svg-list list">
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg  width="16" height="16">
+                                <svg class="team-svg"  width="16" height="16">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a></li>
@@ -170,22 +170,22 @@
                         <p class="team-names">Marketing</p>
                         <ul class="svg-list list">
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg  width="16" height="16">
+                                <svg class="team-svg"  width="16" height="16">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a></li>
@@ -197,22 +197,22 @@
                         <p class="team-names">UI Designer</p>
                         <ul class="svg-list list">
                             <li class="img-svg"><a href="" class="icon-svg link">
-                                <svg  width="16" height="16">
+                                <svg class="team-svg"  width="16" height="16">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg link">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg link">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a></li>
                             <li class="img-svg"><a href="" class="icon-svg link">
-                                <svg width="16" height="16">
+                                <svg class="team-svg" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a></li>
@@ -223,6 +223,7 @@
         </section>
         <!-- Customers -->
         <section class="customers">
+            <div class="container">
             <h2 class="title-team">Customers</h2>
             <ul class="customers-list list">
                 <li class="customers-item">
@@ -268,44 +269,44 @@
                     </a>
                 </li>
             </ul>
-
+        </div>
         </section>
         </main>
 
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-container container">
-                <div>
+                <div class="footer-div">
                 <a class="footer-logo link" href="./index.html">Web<span class="logo-foot">Studio</span></a>
                 <p class="footer-par">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
-            <div class="footer-div">
+            <div >
                 <p class="footer-text">Social media</p>
                 <ul class="footer-list list">
                     <li class="footer-item">
                         <a class="footer-social link" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-item">
                         <a class="footer-social link" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-item">
                         <a class="footer-social link" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-item">
                         <a class="footer-social link" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
