--- a/portfolio.html
+++ b/portfolio.html
@@ -122,37 +122,37 @@
         <!-- FOOTER -->
         <footer class="footer">
             <div class="footer-container container">
-                <div>
+                <div class="footer-div">
                 <a class="footer-logo link" href="./index.html">Web<span class="logo-foot">Studio</span></a>
                 <p class="footer-par">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
-            <div class="footer-div">
+            <div >
                 <p class="footer-text">Social media</p>
                 <ul class="footer-list list">
                     <li class="footer-item">
                         <a class="footer-social link" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-item">
                         <a class="footer-social link" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-item">
                         <a class="footer-social link" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-item">
                         <a class="footer-social link" href="">
-                            <svg width="24" height="24">
+                            <svg class="footer-svg" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
